--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/deepseek": "^0.2.16",
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.23",
+    "@andresaya/edge-tts": "^1.3.1",
     "@hono/node-server": "^1.17.1",
     "@mistralai/mistralai": "^1.7.5",
     "ai": "^4.3.19",
+    "dotenv": "^17.2.1",
     "hono": "^4.8.9",
-    "rpc-websockets": "^9.1.2"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
