--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mistralai/mistralai": "^1.7.5",
     "ai": "^4.3.19",
     "dotenv": "^17.2.1",
+    "edge-tts-fork": "^1.0.0",
     "hono": "^4.8.9",
     "ws": "^8.18.3"
   },
