--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/openai": "^1.3.23",
     "@andresaya/edge-tts": "^1.3.1",
     "@hono/node-server": "^1.17.1",
+    "@langchain/core": "^0.3.66",
+    "@langchain/langgraph": "^0.4.0",
     "@mistralai/mistralai": "^1.7.5",
     "ai": "^4.3.19",
     "dotenv": "^17.2.1",
