--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^17.2.1",
     "edge-tts-fork": "^1.0.0",
     "hono": "^4.8.9",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
