--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.1",
     "edge-tts-fork": "^1.0.0",
     "hono": "^4.8.9",
+    "json-obj-manager": "^1.3.2",
     "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
