--- a/example.env
+++ b/example.env
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=''
 GEMINI_API_KEY=''
-GOOGLE_GENERATIVE_AI_API_KEY=''
 MISTRAL_API_KEY=''
+DEEPSEEK_API_KEY=''
+ANTHROPIC_API_KEY=''
