--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/deepseek": "^0.2.16",
     "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/mistral": "^2.0.0",
     "@ai-sdk/openai": "^1.3.23",
     "@andresaya/edge-tts": "^1.3.1",
     "@hono/node-server": "^1.17.1",
