refactor: update json-obj-manager imports and package config
Update imports to use new json-obj-manager node-specific exports
Rename build output files and update package name/version

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "asr_API",
+  "name": "ai_streaming_backend",
   "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "build:win-x64": "bun build --compile --target=bun-windows-x64 ./src/index.ts --outfile dist/myapp-windows-x64",
-    "build:win-x64-baseline": "bun build --compile --target=bun-windows-x64-baseline ./src/index.ts --outfile dist/myapp-windows-x64-baseline",
-    "build:linux-x64": "bun build --compile --target=bun-linux-x64 ./src/index.ts --outfile dist/myapp-linux-x64",
-    "build:linux-arm64": "bun build --compile --target=bun-linux-arm64 ./src/index.ts --outfile dist/myapp-linux-arm64",
-    "build:macos-arm64": "bun build --compile --target=bun-darwin-arm64 ./src/index.ts --outfile dist/myapp-macos-arm64",
-    "build:macos-x64": "bun build --compile --target=bun-darwin-x64 ./src/index.ts --outfile dist/myapp-macos-x64"
+    "build:win-x64": "bun build --compile --target=bun-windows-x64 ./src/index.ts --outfile dist/Ai-live-windows-x64",
+    "build:win-x64-baseline": "bun build --compile --target=bun-windows-x64-baseline ./src/index.ts --outfile dist/Ai-live-windows-x64-baseline",
+    "build:linux-x64": "bun build --compile --target=bun-linux-x64 ./src/index.ts --outfile dist/Ai-live-linux-x64",
+    "build:linux-arm64": "bun build --compile --target=bun-linux-arm64 ./src/index.ts --outfile dist/Ai-live-linux-arm64",
+    "build:macos-arm64": "bun build --compile --target=bun-darwin-arm64 ./src/index.ts --outfile dist/Ai-live-macos-arm64",
+    "build:macos-x64": "bun build --compile --target=bun-darwin-x64 ./src/index.ts --outfile dist/Ai-live-macos-x64"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -27,7 +28,7 @@
     "dotenv": "^17.2.1",
     "edge-tts-fork": "^1.0.0",
     "hono": "^4.8.9",
-    "json-obj-manager": "^1.3.6",
+    "json-obj-manager": "^1.4.2",
     "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
